--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			<table>
 				<tr>
 					<td class="title">Clicker</td>
+					<td><a class="menu" href="update.html">Update log</a>
 					<td><!--<button onClick="save()">Save</button></td>
 					<td><button onClick="load_game()">Load</button>--></td>
 				</tr>
