--- a/index.html
+++ b/index.html
@@ -20,17 +20,33 @@
 		<p>You have <span id="time">0</span> time resources</p>
 		<h2>Clicking</h2>
 		<h3>Pickaxe</h3>
-		<p>You have <span id="stone">0</span> stone <button onClick="tr_stone()">TR</button></p>
-		<p>You have <span id="coal">0</span> coal <button onClick="tr_coal()">TR</button></p>
 		<p>You have <span id="iron">0</span> iron</p>
 		<p>You have <span id="gold">0</span> gold</p>
-		<table>
-		<tr><button onClick="mine(mine_amount)">Mine!</button><button onClick="chop(chop_amount)">Chop!</button></tr>
+		<table class="td_border">
+			<tr class="td_border">
+				<td class="td_border">
+					<button onClick="mine(mine_amount)">Mine!
+					</button>
+				</td>
+				<td class="td_border">
+					<button onClick="chop(chop_amount)">Chop!
+					</button>
+				</td>
+			</tr>
+			<tr class="td_border">
+				<td class="td_border">
+					Stone: <span id="stone">0</span> <button onClick="tr_stone()">TR</button><br />
+					Coal: <span id="coal">0</span> <button onClick="tr_coal()">TR</button><br />
+					Iron: <span id="iron">0</span> <button onClick="tr_iron()">TR</button><br />
+					Gold: <span id="gold">0</span> <button onClick="tr_gold()">TR</button>
+				</td>
+				<td class="td_border">
+					Wood: <span id="wood">0</span> <button onClick="tr()">TR</button><br />
+				</td>
+			</tr>
 		</table>
-		<button onClick="mine(mine_amount)">Mine!</button>
 		<h3>Axe</h3>
 		<p>You have <span id="wood">0</span> wood</p>
-		<button onClick="chop(chop_amount)">Chop!</button>
 		<h2>Crafting - tools</h2>
 		<p id="pick">Craft wooden pickaxe (25 wood)</p>
 		<button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button>
