--- a/update.html
+++ b/update.html
@@ -8,7 +8,8 @@
 			<a class="menu" href="index.html">Back</a>
 			<hr color="black" />
 			<p>2017-11-06<br>
-			Github page set up.
+			Github page set up.<br />
+			Better view at ores & wood.
 		</div>
 	</body>
 </html>
