--- a/update.html
+++ b/update.html
@@ -7,9 +7,12 @@
 		<div id="update_log">
 			<a class="menu" href="index.html">Back</a>
 			<hr color="black" />
-			<p>2017-11-06<br>
+			<p>2017-11-07<br />
+			Deleted useless things.<br />
+			Added farming.</p>
+			<p>2017-11-06<br />
 			Github page set up.<br />
-			Better view at ores & wood.
+			Better view at ores & wood.</p>
 		</div>
 	</body>
 </html>
