--- a/update.html
+++ b/update.html
@@ -7,7 +7,9 @@
 		<div id="update_log">
 			<a class="menu" href="index.html">Back</a>
 			<hr color="black" />
-			<p>2017-11-07<br />
+			<p>2017-11-07 (2/2)<br />
+			Added tabs.
+			<p>2017-11-07 (1/2)<br />
 			Deleted useless things.<br />
 			Added farming.</p>
 			<p>2017-11-06<br />
