--- a/index.html
+++ b/index.html
@@ -10,53 +10,58 @@
 			<table>
 				<tr>
 					<td class="title">Clicker</td>
+					<td><button class="tablinks" onclick="open_tab(event, 'clicker_tab')">Clicker</button></td>
+					<td><button class="tablinks" onclick="open_tab(event, 'crafting_tab')">Crafting</button></td>
+					<td><button id="furnace_visibility" class="tablinks" onclick="open_tab(event, 'furnace_tab')">Furnace</button></td>
 					<td><a class="menu" href="update.html">Update log</a>
 					<td><!--<button onClick="save()">Save</button></td>
 					<td><button onClick="load_game()">Load</button>--></td>
 				</tr>
 			</table>
 		</div>
-		<h1><u>Clicker</u></h1>
-		<p>You have <span id="time">0</span> time resources</p>
-		<table class="td_border">
-			<tr class="td_border">
-				<td class="td_border">
-					<button onClick="mine(mine_amount)">Mine!</button>
-				</td>
-				<td class="td_border">
-					<button onClick="chop(chop_amount)">Chop!</button>
-				</td>
-				<td class="td_border">
-					<button onClick="seed(seed_amount)">Find!</button>
-				</td>
-				<td class="td_border">
-					<button onClick="farm(farm_amount)">Farm!</button>
-				</td>
-			</tr>
-			<tr class="td_border">
-				<td class="td_border">
-					Stone: <span id="stone">0</span> <button onClick="tr_stone()">TR</button><br />
-					Coal: <span id="coal">0</span> <button onClick="tr_coal()">TR</button><br />
-					Iron: <span id="iron">0</span> <button onClick="tr_iron()">TR</button><br />
-					Gold: <span id="gold">0</span> <button onClick="tr_gold()">TR</button>
-				</td>
-				<td class="td_border">
-					Wood: <span id="wood">0</span> <button onClick="tr()">TR</button><br />
-				</td>
-				<td class="td_border">
-					Seeds: <span id="wheat_seed">0</span> <button onClick="tr_wheat_seed">TR</button><br />
-				</td>
-				<td class="td_border">
-					Wheat: <span id="wheat">0</span><br />
-				</td>
-			</tr>
-		</table>
-		<h2>Crafting - tools</h2>
-		<p id="pick">Craft wooden pickaxe (25 wood)</p>
-		<button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button>
-		<p id="furnace">Craft furnace (100 stone)</p>
-		<button onClick="craft_furnace()">Craft!</button>
-		
-		<h2>Furnace</h2>
+		<div id="clicker_tab" class="tabcontent"><h1><u>Clicker</u></h1>
+			<p>You have <span id="time">0</span> time resources</p>
+			<table class="td_border">
+				<tr class="td_border">
+					<td class="td_border">
+						<button onClick="mine(mine_amount)">Mine!</button>
+					</td>
+					<td class="td_border">
+						<button onClick="chop(chop_amount)">Chop!</button>
+					</td>
+					<td class="td_border">
+						<button onClick="seed(seed_amount)">Search!</button>
+					</td>
+					<td class="td_border">
+						<button onClick="farm(farm_amount)">Farm!</button>
+					</td>
+				</tr>
+				<tr class="td_border">
+					<td class="td_border">
+						Stone: <span id="stone">0</span> <button onClick="tr_stone()">TR</button><br />
+						Coal: <span id="coal">0</span> <button onClick="tr_coal()">TR</button><br />
+						Iron: <span id="iron">0</span> <button onClick="tr_iron()">TR</button><br />
+						Gold: <span id="gold">0</span> <button onClick="tr_gold()">TR</button>
+					</td>
+					<td class="td_border">
+						Wood: <span id="wood">0</span> <button onClick="tr()">TR</button><br />
+					</td>
+					<td class="td_border">
+						Seeds: <span id="wheat_seed">0</span> <button onClick="tr_wheat_seed">TR</button><br />
+					</td>
+					<td class="td_border">
+						Wheat: <span id="wheat">0</span><br />
+					</td>
+				</tr>
+			</table>
+		</div>
+		<div id="crafting_tab" class="tabcontent"><h1><u>Crafting - tools</u></h1>
+			<p id="pick">Craft wooden pickaxe (25 wood)</p>
+			<button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button>
+			<p id="furnace">Craft furnace (100 stone)</p>
+			<button onClick="craft_furnace()">Craft!</button>
+		</div>
+		<div id="furnace_tab" class="tabcontent"><h1>Furnace</h1>
+		</div>
 	</body>
 </html>
