--- a/index.html
+++ b/index.html
@@ -56,10 +56,33 @@
 			</table>
 		</div>
 		<div id="crafting_tab" class="tabcontent"><h1><u>Crafting - tools</u></h1>
-			<p id="pick">Craft wooden pickaxe (25 wood)</p>
-			<button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button>
-			<p id="furnace">Craft furnace (100 stone)</p>
-			<button onClick="craft_furnace()">Craft!</button>
+			<table class="td_border">
+				<tr class="td_border">
+					<th class="td_border">Item</th>
+					<th class="td_border">Cost</th>
+					<th class="td_border">Craft</th>
+				</tr>
+				<tr class="td_border" id="wooden_pickaxe">
+					<td class="td_border">Wooden pickaxe</td>
+					<td class="td_border">25 wood</td>
+					<td class="td_border"><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
+				</tr>
+				<tr class="td_border hide" id="stone_pickaxe">
+					<td class="td_border">Stone pickaxe</td>
+					<td class="td_border">50 wood<br />30 stone</td>
+					<td class="td_border"><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
+				</tr>
+				<tr class="td_border hide" id="iron_pickaxe">
+					<td class="td_border">Iron pickaxe</td>
+					<td class="td_border">100 wood<br />40 stone<br />25 iron</td>
+					<td class="td_border"><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
+				</tr>
+				<tr class="td_border" id="furnace">
+					<td class="td_border">Furnace</td>
+					<td class="td_border">100 stone</td>
+					<td class="td_border"><button onClick="craft_furnace()">Craft!</button><td>
+				</tr>
+			</table>
 		</div>
 		<div id="furnace_tab" class="tabcontent"><h1>Furnace</h1>
 		</div>
