--- a/update.html
+++ b/update.html
@@ -7,6 +7,8 @@
 		<div id="update_log">
 			<a class="menu" href="index.html">Back</a>
 			<hr color="black" />
+			<p>2017-11-08<br />
+			Added table for crafting tools.
 			<p>2017-11-07 (2/2)<br />
 			Added tabs.
 			<p>2017-11-07 (1/2)<br />
