--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 						<button onClick="mine(mine_amount)">Mine!</button>
 					</td>
 					<td class="td_border">
-						<button onClick="chop(chop_amount)">Chop!</button>
+						<button id="furnace_visibility" class="tablinks" onclick="open_tab(event, 'furnace_tab')">Furnace</button>
+					</td>
+					<td class="td_border">
+						<button onClick="chop()">Chop!</button>
 					</td>
 					<td class="td_border">
 						<button onClick="seed(seed_amount)">Search!</button>
@@ -38,13 +41,16 @@
 				</tr>
 				<tr class="td_border">
 					<td class="td_border">
-						Stone: <span id="stone">0</span> <button onClick="tr_stone()">TR</button><br />
-						Coal: <span id="coal">0</span> <button onClick="tr_coal()">TR</button><br />
-						Iron: <span id="iron">0</span> <button onClick="tr_iron()">TR</button><br />
-						Gold: <span id="gold">0</span> <button onClick="tr_gold()">TR</button>
+						Stone: <span id="stone">0</span> <button class="tr_stone" onClick="tr_stone()">TR</button><br />
+						Coal: <span id="coal">0</span> <button class="tr_coal" onClick="tr_coal()">TR</button><br />
+						Iron: <span id="iron">0</span> <button class="tr_iron" onClick="tr_iron()">TR</button><br />
+						Gold: <span id="gold">0</span> <button class="tr_gold" onClick="tr_gold()">TR</button>
 					</td>
 					<td class="td_border">
-						Wood: <span id="wood">0</span> <button onClick="tr()">TR</button><br />
+						Iron bar: <span id="iron_bar">0</span>
+					</td>
+					<td class="td_border">
+						Wood: <span id="wood">0</span> <button onClick="tr_wood()">TR</button><br />
 					</td>
 					<td class="td_border">
 						Seeds: <span id="wheat_seed">0</span> <button onClick="tr_wheat_seed">TR</button><br />
@@ -77,6 +83,11 @@
 					<td class="td_border">100 wood<br />40 stone<br />25 iron</td>
 					<td class="td_border"><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
 				</tr>
+				<tr class="td_border" id="wooden_axe">
+					<td class="td_border">Wooden axe</td>
+					<td class="td_border">25 wood</td>
+					<td class="td_border"><button onClick="axe_upgrade()" id="axe_upgrade">Craft!</button></td>
+				</tr>
 				<tr class="td_border" id="furnace">
 					<td class="td_border">Furnace</td>
 					<td class="td_border">100 stone</td>
@@ -85,6 +96,26 @@
 			</table>
 		</div>
 		<div id="furnace_tab" class="tabcontent"><h1>Furnace</h1>
+			<table class="td_border">
+				<tr class="td_border">
+					<th class="td_border">Item</th>
+					<th class="td_border">Amount</th>
+					<th class="td_border">Melted</th>
+					<th class="td_border">Amount</th>
+					<th class="td_border">Fuel</th>
+					<th class="td_border">Melt</th>
+					<th class="td_border">Amount</th>
+				</tr>
+				<tr class="td_border">
+					<td class="td_border">Iron</td>
+					<td class="td_border" id="iron_furnace">0</td>
+					<td class="td_border" id="iron_bar_furnace">Iron bar</td>
+					<td class="td_border">0</td>
+					<td class="td_border">1 coal</td>
+					<td class="td_border" id="coal_furnace">0</td>
+					<td class="td_border"><button onClick="melt_iron()">Melt!</button></td>
+				</tr>
+			</table>
 		</div>
 	</body>
 </html>
