--- a/update.html
+++ b/update.html
@@ -7,6 +7,11 @@
 		<div id="update_log">
 			<a class="menu" href="index.html">Back</a>
 			<hr color="black" />
+			<p>2018-04-10<br />
+			Added furnace<br />
+			Improved tr<br />
+			Addes axes<br />
+			</p>
 			<p>2017-11-08<br />
 			Added table for crafting tools.
 			<p>2017-11-07 (2/2)<br />
