Iron bars, background image, td_borders & GOLD
Crafting requires iron bars instead of iron
Added background image ^^
Finally got rid out of "td_border"s on almost every line of code...
You can now smelt gold for some good ite... wait... actually for nothing

--- a/update.html
+++ b/update.html
@@ -7,7 +7,12 @@
 		<div id="update_log">
 			<a class="menu" href="index.html">Back</a>
 			<hr color="black" />
-			<p>2018-04-10<br />
+			<p>2018-04-10 (2/2)<br />
+			Crafting requires iron bars instead of iron<br />
+			Added background image ^^<br />
+			Finally got rid out of "td_border"s on almost every line of code...<br />
+			You can now smelt gold for some good ite... wait... actually for nothing
+			<p>2018-04-10 (1/2)<br />
 			Added furnace<br />
 			Improved tr<br />
 			Addes axes<br />
