--- a/index.html
+++ b/index.html
@@ -7,113 +7,119 @@
 	</head>
 	<body>
 		<div id="menu">
-			<table>
-				<tr>
-					<td class="title">Clicker</td>
-					<td><button class="tablinks" onclick="open_tab(event, 'clicker_tab')">Clicker</button></td>
-					<td><button class="tablinks" onclick="open_tab(event, 'crafting_tab')">Crafting</button></td>
-					<td><button id="furnace_visibility" class="tablinks" onclick="open_tab(event, 'furnace_tab')">Furnace</button></td>
-					<td><a class="menu" href="update.html">Update log</a>
-					<td><!--<button onClick="save()">Save</button></td>
-					<td><button onClick="load_game()">Load</button>--></td>
+			<table class="td_border">
+				<tr class="td_border">
+					<td class="title td_border">Clicker</td>
+					<td class="td_border"><button class="tablinks" onclick="open_tab(event, 'clicker_tab')">Clicker</button></td>
+					<td class="td_border"><button class="tablinks" onclick="open_tab(event, 'crafting_tab')">Crafting</button></td>
+					<td class="td_border"><button id="furnace_visibility" class="tablinks" onclick="open_tab(event, 'furnace_tab')">Furnace</button></td>
+					<td class="td_border"><a class="menu" href="update.html">Update log</a>
 				</tr>
 			</table>
 		</div>
 		<div id="clicker_tab" class="tabcontent"><h1><u>Clicker</u></h1>
 			<p>You have <span id="time">0</span> time resources</p>
-			<table class="td_border">
-				<tr class="td_border">
-					<td class="td_border">
+			<table>
+				<tr>
+					<td>
 						<button onClick="mine(mine_amount)">Mine!</button>
 					</td>
-					<td class="td_border">
+					<td>
 						<button id="furnace_visibility" class="tablinks" onclick="open_tab(event, 'furnace_tab')">Furnace</button>
 					</td>
-					<td class="td_border">
+					<td>
 						<button onClick="chop()">Chop!</button>
 					</td>
-					<td class="td_border">
-						<button onClick="seed(seed_amount)">Search!</button>
+					<td>
+						<button onClick="seed()">Search!</button>
 					</td>
-					<td class="td_border">
+					<td>
 						<button onClick="farm(farm_amount)">Farm!</button>
 					</td>
 				</tr>
-				<tr class="td_border">
-					<td class="td_border">
-						Stone: <span id="stone">0</span> <button class="tr_stone" onClick="tr_stone()">TR</button><br />
-						Coal: <span id="coal">0</span> <button class="tr_coal" onClick="tr_coal()">TR</button><br />
-						Iron: <span id="iron">0</span> <button class="tr_iron" onClick="tr_iron()">TR</button><br />
-						Gold: <span id="gold">0</span> <button class="tr_gold" onClick="tr_gold()">TR</button>
+				<tr>
+					<td>
+						Stone: <span id="stone">0</span> <button class="tr_stone tr" onClick="tr_stone()">TR</button><br />
+						Coal: <span id="coal">0</span> <button class="tr_coal tr" onClick="tr_coal()">TR</button><br />
+						Iron: <span id="iron">0</span> <button class="tr_iron tr" onClick="tr_iron()">TR</button><br />
+						Gold: <span id="gold">0</span> <button class="tr_gold tr" onClick="tr_gold()">TR</button>
 					</td>
-					<td class="td_border">
+					<td>
 						Iron bar: <span id="iron_bar">0</span>
+						Gold bar: <span id="gold_bar">0</span>
 					</td>
-					<td class="td_border">
+					<td>
 						Wood: <span id="wood">0</span> <button onClick="tr_wood()">TR</button><br />
 					</td>
-					<td class="td_border">
+					<td>
 						Seeds: <span id="wheat_seed">0</span> <button onClick="tr_wheat_seed">TR</button><br />
 					</td>
-					<td class="td_border">
+					<td>
 						Wheat: <span id="wheat">0</span><br />
 					</td>
 				</tr>
 			</table>
 		</div>
 		<div id="crafting_tab" class="tabcontent"><h1><u>Crafting - tools</u></h1>
-			<table class="td_border">
-				<tr class="td_border">
-					<th class="td_border">Item</th>
-					<th class="td_border">Cost</th>
-					<th class="td_border">Craft</th>
+			<table>
+				<tr>
+					<th>Item</th>
+					<th>Cost</th>
+					<th>Craft</th>
 				</tr>
-				<tr class="td_border" id="wooden_pickaxe">
-					<td class="td_border">Wooden pickaxe</td>
-					<td class="td_border">25 wood</td>
-					<td class="td_border"><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
+				<tr id="wooden_pickaxe">
+					<td>Wooden pickaxe</td>
+					<td>25 wood</td>
+					<td><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
 				</tr>
-				<tr class="td_border hide" id="stone_pickaxe">
-					<td class="td_border">Stone pickaxe</td>
-					<td class="td_border">50 wood<br />30 stone</td>
-					<td class="td_border"><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
+				<tr class="hide" id="stone_pickaxe">
+					<td>Stone pickaxe</td>
+					<td>50 wood<br />30 stone</td>
+					<td><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
 				</tr>
-				<tr class="td_border hide" id="iron_pickaxe">
-					<td class="td_border">Iron pickaxe</td>
-					<td class="td_border">100 wood<br />40 stone<br />25 iron</td>
-					<td class="td_border"><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
+				<tr class="hide" id="iron_pickaxe">
+					<td>Iron pickaxe</td>
+					<td>100 wood<br />40 stone<br />25 iron bars</td>
+					<td><button onClick="pick_upgrade()" id="pick_upgrade">Craft!</button></td>
 				</tr>
-				<tr class="td_border" id="wooden_axe">
-					<td class="td_border">Wooden axe</td>
-					<td class="td_border">25 wood</td>
-					<td class="td_border"><button onClick="axe_upgrade()" id="axe_upgrade">Craft!</button></td>
+				<tr id="wooden_axe">
+					<td>Wooden axe</td>
+					<td>25 wood</td>
+					<td><button onClick="axe_upgrade()" id="axe_upgrade">Craft!</button></td>
 				</tr>
-				<tr class="td_border" id="furnace">
-					<td class="td_border">Furnace</td>
-					<td class="td_border">100 stone</td>
-					<td class="td_border"><button onClick="craft_furnace()">Craft!</button><td>
+				<tr id="furnace">
+					<td>Furnace</td>
+					<td>100 stone</td>
+					<td><button onClick="craft_furnace()">Craft!</button><td>
 				</tr>
 			</table>
 		</div>
 		<div id="furnace_tab" class="tabcontent"><h1>Furnace</h1>
-			<table class="td_border">
-				<tr class="td_border">
-					<th class="td_border">Item</th>
-					<th class="td_border">Amount</th>
-					<th class="td_border">Melted</th>
-					<th class="td_border">Amount</th>
-					<th class="td_border">Fuel</th>
-					<th class="td_border">Melt</th>
-					<th class="td_border">Amount</th>
+			<p>You have <span id="coal_furnace">0</span> coal</p>
+			<table>
+				<tr>
+					<th>Item</th>
+					<th>Amount</th>
+					<th>Melted</th>
+					<th>Amount</th>
+					<th>Fuel</th>
+					<th>Melt</th>
 				</tr>
-				<tr class="td_border">
-					<td class="td_border">Iron</td>
-					<td class="td_border" id="iron_furnace">0</td>
-					<td class="td_border" id="iron_bar_furnace">Iron bar</td>
-					<td class="td_border">0</td>
-					<td class="td_border">1 coal</td>
-					<td class="td_border" id="coal_furnace">0</td>
-					<td class="td_border"><button onClick="melt_iron()">Melt!</button></td>
+				<tr>
+					<td>Iron</td>
+					<td id="iron_furnace">0</td>
+					<td>Iron bar</td>
+					<td id="iron_bar_furnace">0</td>
+					<td>1 coal</td>
+					<td><button onClick="melt_iron()">Melt!</button></td>
+				</tr>
+				<tr>
+					<td>Gold</td>
+					<td id="gold_furnace">0</td>
+					<td>Gold bar</td>
+					<td id="gold_bar_furnace">0</td>
+					<td>4 coal</td>
+					<td><button onClick="melt_gold()">Melt!</button></td>
 				</tr>
 			</table>
 		</div>
