--- a/update.html
+++ b/update.html
@@ -7,6 +7,10 @@
 		<div id="update_log">
 			<a class="menu" href="index.html">Back</a>
 			<hr color="black" />
+			<p>2018-04-11<br />
+			THOSE NEW BUTTONS ARE AWESOME<br />
+			Tr'ing stone isn't avaible without pickaxe as it was before<br />
+			Stats page with... total time resources... u can just use a watch to count them :P
 			<p>2018-04-10 (2/2)<br />
 			Crafting requires iron bars instead of iron<br />
 			Added background image ^^<br />
