--- a/update.html
+++ b/update.html
@@ -7,30 +7,44 @@
 		<div id="update_log">
 			<a class="menu" href="index.html">Back</a>
 			<hr color="black" />
-			<p>2018-04-11<br />
+			<p>
+			2018-04-12<br />
+			New buttons are almost everywhere... not in furnace... actually... they will be in furnace in the next update... I think<br />
+			Info box to display text for your actions... it will look better in future, cause it will disapper (if i will finally make it)
+			</p>
+			<p>
+			2018-04-11<br />
 			THOSE NEW BUTTONS ARE AWESOME<br />
 			Tr'ing stone isn't avaible without pickaxe as it was before<br />
 			Stats page with... total time resources... u can just use a watch to count them :P
-			<p>2018-04-10 (2/2)<br />
+			<p>
+			2018-04-10 (2/2)<br />
 			Crafting requires iron bars instead of iron<br />
 			Added background image ^^<br />
 			Finally got rid out of "td_border"s on almost every line of code...<br />
 			You can now smelt gold for some good ite... wait... actually for nothing
-			<p>2018-04-10 (1/2)<br />
+			<p>
+			2018-04-10 (1/2)<br />
 			Added furnace<br />
 			Improved tr<br />
-			Addes axes<br />
+			Addes axes
 			</p>
-			<p>2017-11-08<br />
+			<p>
+			2017-11-08<br />
 			Added table for crafting tools.
-			<p>2017-11-07 (2/2)<br />
+			<p>
+			2017-11-07 (2/2)<br />
 			Added tabs.
-			<p>2017-11-07 (1/2)<br />
+			<p>
+			2017-11-07 (1/2)<br />
 			Deleted useless things.<br />
-			Added farming.</p>
-			<p>2017-11-06<br />
+			Added farming.
+			</p>
+			<p>
+			2017-11-06<br />
 			Github page set up.<br />
-			Better view at ores & wood.</p>
+			Better view at ores & wood.
+			</p>
 		</div>
 	</body>
 </html>
